debug off, profile css

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,9 +8,9 @@
     <title>Clipboard</title>
     <!-- flask style lienk -->
     {% if dark %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/dark/profile.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/dark/create.css') }}">
     {% else %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/light/profile.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/light/create.css') }}">
     {% endif %}
     
 </head>
