--- a/templates/view.html
+++ b/templates/view.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/light/view.css') }}">
     {% endif %}
 
-    <script>
+    <!-- <script>
         function clip_text(a_string){
             var input = document.createElement('input')
             input.id="__copyText__";
@@ -27,7 +27,7 @@
         function clip_div(divId){
            return clip_text(document.getElementById(divId).innerText)
         }
-    </script>
+    </script> -->
 
 </head>
 <body>
@@ -38,13 +38,13 @@
             </svg>
         </a>
         <h1>View Post</h1>
-        <a class="trash-button" href="/" onclick="clip_div('https://clipboard.gg/view/{{ post_id }}')">
+        <!-- <a class="trash-button" href="/" onclick="clip_div('https://clipboard.gg/view/{{ post_id }}')">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z" />
             </svg>
-        </a>
+        </a> -->
         {% if post['owner'] == visitor %}
-        <a class="share-button" href="/delete/post/{{ post_id }}">
+        <a class="trash-button" href="/delete/post/{{ post_id }}">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
             </svg>
