--- a/templates/view.html
+++ b/templates/view.html
@@ -11,6 +11,7 @@
     {% else %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/light/view.css') }}">
     {% endif %}
+    <!-- <link rel="stylesheet" href="../static/css/light/view.css"> -->
 
     <!-- <script>
         function clip_text(a_string){
@@ -32,11 +33,19 @@
 </head>
 <body>
     <nav class="nav">
+        {% if archive %}
+        <a class="nav-button" href="/archive">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+            </svg>
+        </a>
+        {% else %}
         <a class="nav-button" href="/">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
             </svg>
         </a>
+        {% endif %}
         <h1>View Post</h1>
         <!-- <a class="trash-button" href="/" onclick="clip_div('https://clipboard.gg/view/{{ post_id }}')">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -48,22 +57,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
             </svg>
-        </a><script>
-function clip_text(a_string){
-    var input = document.createElement('input')
-    input.id="__copyText__";
-    input.value = a_string; // OOPS! document.getElementById(divId).innerText;
-    document.body.appendChild(input);
-    input.select();
-    document.execCommand("copy");
-    var txt = input.value
-    input.remove()
-    console.log("OK COPIED: '"+txt+"'")
-}
-function clip_div(divId){
-   return clip_text(document.getElementById(divId).innerText)
-}
-</script>
+        </a>
         {% endif %}
     </nav>
 
@@ -116,106 +110,106 @@ function clip_div(divId){
         <h1>{{ post['date'] }}</h1>
         <h3>{{ owner['full_name'] }}</h3>
         <br>
-        <h1>Manager(s): </h1><span class="input">{{ post['managers'] }}</span><br>
+        <h1>Manager(s): </h1><span class="input wrap">{{ post['managers'] }}</span><br>
         {% if post['oepe'] %}
-        <h1>OEPE: </h1><span class="input">{{ post['oepe'] }}</span><br>
+        <h1>OEPE: </h1><span class="input wrap">{{ post['oepe'] }}</span><br>
         {% endif %}
         {% if post['mfy'] %}
-        <h1>MFY: </h1><span class="input">{{ post['mfy'] }}</span><br>
+        <h1>MFY: </h1><span class="input wrap">{{ post['mfy'] }}</span><br>
         {% endif %}
         {% if post['sta'] %}
-        <h1>STA: </h1><span class="input">{{ post['sta'] }}</span><br>
+        <h1>STA: </h1><span class="input wrap">{{ post['sta'] }}</span><br>
         {% endif %}
         {% if post['waste'] %}
-        <h1>Waste: </h1><span class="input">{{ post['waste'] }}</span><br>
+        <h1>Waste: </h1><span class="input wrap">{{ post['waste'] }}</span><br>
         {% endif %}
         <br><br><br>
         {% if post['running'] %}
-        <h1>Running: </h1><span class="input">{{ post['running'] }}</span><br>
+        <h1>Running: </h1><span class="input wrap">{{ post['running'] }}</span><br>
         {% endif %}
         {% if post['presenting'] %}
-        <h1>Presenting: </h1><span class="input">{{ post['presenting'] }}</span><br>
+        <h1>Presenting: </h1><span class="input wrap">{{ post['presenting'] }}</span><br>
         {% endif %}
         {% if post['ot'] %}
-        <h1>OT: </h1><span class="input">{{ post['ot'] }}</span><br>
+        <h1>OT: </h1><span class="input wrap">{{ post['ot'] }}</span><br>
         {% endif %}
         {% if post['cod2'] %}
-        <h1>COD2: </h1><span class="input">{{ post['cod2'] }}</span><br>
+        <h1>COD2: </h1><span class="input wrap">{{ post['cod2'] }}</span><br>
         {% endif %}
         {% if post['cash'] %}
-        <h1>Cash: </h1><span class="input">{{ post['cash'] }}</span><br>
+        <h1>Cash: </h1><span class="input wrap">{{ post['cash'] }}</span><br>
         {% endif %}
         {% if post['fries'] %}
-        <h1>Fries: </h1><span class="input">{{ post['fries'] }}</span><br>
+        <h1>Fries: </h1><span class="input wrap">{{ post['fries'] }}</span><br>
         {% endif %}
         {% if post['counter'] %}
-        <h1>Counter: </h1><span class="input">{{ post['counter'] }}</span><br>
+        <h1>Counter: </h1><span class="input wrap">{{ post['counter'] }}</span><br>
         {% endif %}
         {% if post['dd-dt'] %}
-        <h1>DT Drink Draw: </h1><span class="input">{{ post['dd-dt'] }}</span><br>
+        <h1>DT Drink Draw: </h1><span class="input wrap">{{ post['dd-dt'] }}</span><br>
         {% endif %}
         {% if post['dd-fc'] %}
-        <h1>FC Drink Draw: </h1><span class="input">{{ post['dd-fc'] }}</span><br>
+        <h1>FC Drink Draw: </h1><span class="input wrap">{{ post['dd-fc'] }}</span><br>
         {% endif %}
         {% if post['cafe'] %}
-        <h1>Cafe: </h1><span class="input">{{ post['cafe'] }}</span><br>
+        <h1>Cafe: </h1><span class="input wrap">{{ post['cafe'] }}</span><br>
         {% endif %}
         {% if post['host'] %}
-        <h1>Host: </h1><span class="input">{{ post['host'] }}</span><br>
+        <h1>Host: </h1><span class="input wrap">{{ post['host'] }}</span><br>
         {% endif %}
         {% if post['grilled'] %}
-        <h1>Grilled: </h1><span class="input">{{ post['grilled'] }}</span><br>
+        <h1>Grilled: </h1><span class="input wrap">{{ post['grilled'] }}</span><br>
         {% endif %}
         {% if post['fried'] %}
-        <h1>Fried: </h1><span class="input">{{ post['fried'] }}</span><br>
+        <h1>Fried: </h1><span class="input wrap">{{ post['fried'] }}</span><br>
         {% endif %}
         {% if post['initiator1'] %}
-        <h1>Initiator Side 1: </h1><span class="input">{{ post['initiator1'] }}</span><br>
+        <h1>Initiator Side 1: </h1><span class="input wrap">{{ post['initiator1'] }}</span><br>
         {% endif %}
         {% if post['initiator2'] %}
-        <h1>Initiator Side 2: </h1><span class="input">{{ post['initiator2'] }}</span><br>
+        <h1>Initiator Side 2: </h1><span class="input wrap">{{ post['initiator2'] }}</span><br>
         {% endif %}
         {% if post['assembler1'] %}
-        <h1>Assembler Side 1: </h1><span class="input">{{ post['assembler1'] }}</span><br>
+        <h1>Assembler Side 1: </h1><span class="input wrap">{{ post['assembler1'] }}</span><br>
         {% endif %}
         {% if post['assembler2'] %}
-        <h1>Assembler Side 2: </h1><span class="input">{{ post['assembler2'] }}</span><br>
+        <h1>Assembler Side 2: </h1><span class="input wrap">{{ post['assembler2'] }}</span><br>
         {% endif %}
         {% if post['trainee1'] %}
         <br><br>
-        <h1>Trainee 1: </h1><span class="input">{{ post['trainee1'] }}</span><br>
+        <h1>Trainee 1: </h1><span class="input wrap">{{ post['trainee1'] }}</span><br>
         {% endif %}
         {% if post['strengths1'] %}
-        <h1>Strengths: </h1><span class="input">{{ post['strengths1'] }}</span><br>
+        <h1>Strengths: </h1><span class="input wrap">{{ post['strengths1'] }}</span><br>
         {% endif %}
         {% if post['weaknesses1'] %}
-        <h1>Weaknesses: </h1><span class="input">{{ post['weaknesses1'] }}</span><br>
+        <h1>Weaknesses: </h1><span class="input wrap">{{ post['weaknesses1'] }}</span><br>
         {% endif %}
         {% if post['feedback1'] %}
-        <h1>Feedback: </h1><span class="input">{{ post['feedback1'] }}</span><br>
+        <h1>Feedback: </h1><span class="input wrap">{{ post['feedback1'] }}</span><br>
         {% endif %}
         {% if post['trainee2'] %}
         <br><br>
-        <h1>Trainee 2: </h1><span class="input">{{ post['trainee2'] }}</span><br>
+        <h1>Trainee 2: </h1><span class="input wrap">{{ post['trainee2'] }}</span><br>
         {% endif %}
         {% if post['strengths2'] %}
-        <h1>Strengths: </h1><span class="input">{{ post['strengths2'] }}</span><br>
+        <h1>Strengths: </h1><span class="input wrap">{{ post['strengths2'] }}</span><br>
         {% endif %}
         {% if post['weaknesses2'] %}
-        <h1>Weaknesses: </h1><span class="input">{{ post['weaknesses2'] }}</span><br>
+        <h1>Weaknesses: </h1><span class="input wrap">{{ post['weaknesses2'] }}</span><br>
         {% endif %}
         {% if post['feedback2'] %}
-        <h1>Feedback: </h1><span class="input">{{ post['feedback2'] }}</span><br>
+        <h1>Feedback: </h1><span class="input wrap">{{ post['feedback2'] }}</span><br>
         {% endif %}
         <br><br><br>
         {% if post['overview'] %}
-        <h1>Overview: </h1><span class="input">{{ post['overview'] }}</span><br>
+        <h1>Overview: </h1><span class="input wrap">{{ post['overview'] }}</span><br>
         {% endif %}
         {% if post['highlights'] %}
-        <h1>Highlights & Opportunities: </h1><span class="input">{{ post['highlights'] }}</span><br>
+        <h1>Highlights & Opportunities: </h1><span class="input wrap">{{ post['highlights'] }}</span><br>
         {% endif %}
         {% if post['feedback'] %}
-        <h1>Feedback: </h1><span class="input">{{ post['feedback'] }}</span><br>
+        <h1>Feedback: </h1><span class="input wrap">{{ post['feedback'] }}</span><br>
         {% endif %}
     </div>
 </body>
