change archive, add profile buttons, etc

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -37,6 +37,17 @@
                 <h1>Log Out</h1>
                 <p>Log out of your account on this device.</p>
             </a>
+            <a class="widget" href="/reset-token">
+                <h1>Reset Token</h1>
+                <p>Disables all links to your profile.</p>
+            </a>
+            <a class="widget" href="/posts/all">
+                <h1>View All Posts</h1>
+                <p>Only available for administrator accounts.</p>
+            </a>
+            <a style="color: gray; border-color: gray;" class="widget special-widget" href=""> <!--"/delete/account/{{ token }}"-->
+                <h1>Delete Account</h1>
+            </a>
             <!-- <a class="widget" href="/delete/account/{{ token }}">
                 <h1>Delete Account</h1>
                 <p>Permenantly remove your account, and all your posts.</p>
