--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,15 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
             </svg>
         </a>
-        <h1>Home</h1>
+        <h1>Posts</h1>
     </nav>
     <div class="container-container">
         <div class="container">
+            {% if own %}
             <a class="widget special-widget" href="/create">
                 <h1>New Recap</h1>
             </a>
+            {% endif %}
             {% for widget in widgets %}
             <a class="widget" href="/view/{{ widget['_id'] }}">
                 <h1>{{ widget['date'] }}</h1>
