--- a/templates/profile.html
+++ b/templates/profile.html
@@ -45,7 +45,7 @@
                 <h1>View All Posts</h1>
                 <p>Only available for administrator accounts.</p>
             </a>
-            <a style="color: gray; border-color: gray;" class="widget special-widget" href=""> <!--"/delete/account/{{ token }}"-->
+            <a style="color: gray; border:" class="widget special-widget" href=""> <!--"/delete/account/{{ token }}"-->
                 <h1>Delete Account</h1>
             </a>
             <!-- <a class="widget" href="/delete/account/{{ token }}">
