--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,11 @@
             {% for widget in widgets %}
             <a class="widget" href="/view/{{ widget['_id'] }}">
                 <h1>{{ widget['date'] }}</h1>
+                {% if all %}
+                <p>{{ widget['name'] }}</p>
+                {% else %}
                 <p>{{ widget['type'] }}</p>
+                {% endif %}
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-8.707l-3-3a1 1 0 00-1.414 1.414L10.586 9H7a1 1 0 100 2h3.586l-1.293 1.293a1 1 0 101.414 1.414l3-3a1 1 0 000-1.414z" clip-rule="evenodd" />
                 </svg>
