--- a/templates/profile.html
+++ b/templates/profile.html
@@ -45,7 +45,11 @@
                 <h1>View All Posts</h1>
                 <p>Only available for administrator accounts.</p>
             </a>
-            <a style="color: gray; border:" class="widget special-widget" href=""> <!--"/delete/account/{{ token }}"-->
+            <a class="widget" href="/invite">
+                <h1>Invite</h1>
+                <p>Create a one-time code for new users to sign up with.</p>
+            </a>
+            <a style="color: gray;" class="widget special-widget" href=""> <!--"/delete/account/{{ token }}"-->
                 <h1>Delete Account</h1>
             </a>
             <!-- <a class="widget" href="/delete/account/{{ token }}">
