--- a/static/css/dark/view.css
+++ b/static/css/dark/view.css
@@ -12,6 +12,7 @@ body {
 h1 {
     font-size: 2rem;
     margin: auto 2rem auto 0;
+    text-align: center;
     /* margin-bottom: 0.5rem; */
 }
 
@@ -215,4 +216,19 @@ input {
 h3 {
     margin-top: 0;
     font-weight: 300;
+}
+
+img {
+    width: 80vw;
+}
+
+.tutorial-desc {
+    margin-top: 1rem;
+    font-size: 1.4rem;
+    text-align: center;
+}
+
+hr {
+    border: 6px dashed var(--black);
+    margin: 6rem 0;
 }
