--- a/static/css/light/view.css
+++ b/static/css/light/view.css
@@ -11,6 +11,7 @@ body {
 h1 {
     font-size: 2rem;
     margin: auto 2rem auto 0;
+    text-align: center;
     /* margin-bottom: 0.5rem; */
 }
 
@@ -224,4 +225,31 @@ input {
 h3 {
     margin-top: 0;
     font-weight: 300;
+}
+
+img {
+    width: 70vw;
+    max-width: 40rem;
+}
+
+.tutorial-desc {
+    margin-top: 1rem;
+    font-size: 1.4rem;
+    text-align: center;
+}
+
+hr {
+    border: 6px dashed var(--black);
+    margin: 6rem 0;
+}
+
+.button-panel {
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.button-panel a {
+    margin: 0 2rem;
 }
