--- a/templates/signup.html
+++ b/templates/signup.html
@@ -27,10 +27,12 @@
             <input class="input" type="text" name="username" placeholder="Username"><br>
             <input class="input" type="password" name="password" placeholder="Password"><br>
             <input class="input" type="password" name="confirm-password" placeholder="Confirm Password"><br>
+            <input class="input" type="text" name="invite-code" placeholder="Invite Code*"><br>
             <input class="inp-sub" type="submit" name="submit" value="Sign Up">
             {% if error %}
                 <p style="color: red;">{{ error }}</p>
             {% endif %}
+            <p>* You need a one-time invite code to sign up for this reasource.<br> Own an account? Generate a code <a href="/invite">here.</a></p>
         </form>
     </div>
 </body>
